2008-08-28  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/profile.py:
	* pycvsanaly2/Timer.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add a profiler to be able to figure out how long it takes
	something and use it in the Metrics extension.
	
2008-08-20  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add support for C++ and Java metrics.
	
2008-08-19  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:
	* pycvsanaly2/extensions/Metrics.py:

	Clean temporary directories up when done.
	
2008-08-19  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Get toplevel dirs only for svn repos.
	
2008-08-08  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	When doing the first checkout in svn, we need to do it for the
	first revision of every top level dir.
	
2008-08-07  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Typo fixed.

2008-07-30  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Instead of checking out the whole repository, download only the
	toplevel directories and update them when needed. It fixes the
	problems with the apache svn.
	
2008-07-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add support for python metrics using pymetrics program.
	
2008-07-28  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use find_program to look for the commands and raise and exception
	when the command is not found in path.
	
2008-07-22  Liliana Tovar <lilitovar@gsyc.es>

	* db/cvsanaly2_model_dbdesigner.png
	* db/cvsanaly2_model_dbdesigner.sql
	* db/cvsanaly2_model_dbdesigner.xml
	
	Added database schema.
	
2008-07-21  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py: